# settlers

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: PermanentMarker32.json  Righteous.json
assets/board/: board.blend  board.mtl
assets/card/: card.blend  card.mtl  diffuse.kra  download (10).jfif  download (11).jfif  download (12).jfif  download (13).jfif  download (14).jfif  download (15).jfif  download (16).jfif  download (17).jfif  download (18).jfif  download (19).jfif  download (20).jfif  download (21).jfif  download (22).jfif  download (23).jfif  download (24).jfif  download (25).jfif  download (26).jfif  download (27).jfif  download (28).jfif  download (29).jfif  download (30).jfif  download (31).jfif  download (32).jfif  download (33).jfif  download (34).jfif  download (35).jfif  download (36).jfif  download (37).jfif  download (4).jfif  download (5).jfif  download (6).jfif  download (7).jfif  download (8).jfif  download (9).jfif  horserider.jfif  roboatk.jfif  robotank.jfif
assets/intersection/: intersection.blend  tower.mtl
assets/pathway/: pathway.blend  pathway.mtl
assets/tile/: tile.blend  tile.mtl
include/: assetfactory.h  building.h  component.h  game.h  goptions.h  intersection.h  pathway.h  pipeline.h  tile.h
shaders/: blockshader.frag  instances.vert  msaa.frag  object.frag  object.vert  objectortho.vert  screenshader.frag  screenshader.vert  sdfText.frag  sdfText.vert  sdfTextOrtho.vert  shadowdepth.frag  shadowdepth.vert
src/: assetfactory.cpp  goptions.cpp  main.cpp
test/: testecs.cpp
